--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/vue-query-devtools": "^5.76.0",
     "@vueuse/core": "^13.2.0",
     "axios": "^1.9.0",
+    "markdown-it": "^14.1.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -28,6 +29,7 @@
     "@playwright/test": "^1.51.1",
     "@tsconfig/node22": "^22.0.1",
     "@types/jsdom": "^21.1.7",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/eslint-plugin": "^1.1.39",
