--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "axios": "^1.9.0",
     "markdown-it": "^14.1.0",
     "pinia": "^3.0.1",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.51.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tsconfig/node22": "^22.0.1",
     "@types/jsdom": "^21.1.7",
     "@types/markdown-it": "^14.1.2",
