--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.9.0",
     "markdown-it": "^14.1.0",
     "pinia": "^3.0.1",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
